# trax

./: .env-template  .gitignore  LICENSE  README.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  serve.py
backend/alembic/: env.py
backend/alembic/versions/: 1f4cc8e3cd41_create_folder_model_and_relationship_.py  349cbc07224a_make_creator_field_unallable.py  47d676b1142f_create_application_selects_tables.py  c101f1d92738_add_creator_relationship_between_user_.py  dbad43640646_create_users_table.py
backend/app/: main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: application.py  auth.py  folder.py  search.py  selects.py
backend/app/core/: auth.py  config.py  logging.py  middleware.py
backend/app/db/: init.py  session.py
backend/app/db/models/: __init__.py  application.py  folder.py  selects.py  user.py
backend/app/repositories/: application.py  folder.py  selects.py  user_repo.py
backend/app/schemas/: application.py  folder.py  selects.py  user.py
backend/app/scripts/: reset_db.py  seed_db.py
backend/app/services/: application.py  folder.py  selects.py
frontend/: .env-template  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  applications-table.tsx  auth-provider.tsx  create-forms.tsx  data-table.tsx  folder-card.tsx  nav-user.tsx  select-creation-row.tsx  selects-table.tsx  site-header.tsx  theme-toggle.tsx
frontend/src/config/: app.ts  brand.ts  endpoints.ts  errors.ts
frontend/src/hooks/: use-applications.ts  (+2 more)
(+10 files in other folders)
